--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,61 +5,42 @@
                 <div class="faq-content mt-45">
                     <div class="about-title">
                         <h6 class="sub-title">A Little More About Us</h6>
-                        <h4 class="title">Frequently Asked Questions <br> About Our Site</h4>
+                        <h4 class="title">Frequently Asked Questions </h4>
                     </div> <!-- faq title -->
                     <div class="about-accordion">
                         <div class="accordion" id="accordionExample">
                             <div class="card">
                                 <div class="card-header" id="headingOne">
-                                    <a href="#" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Frequently Asked Question One</a>
+                                    <a href="#" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">What are the Services provied by us?</a>
                                 </div>
 
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <p class="text">Morbi vehicula arcu et pellentesque tincidunt. Nunc ligula nulla, lobortis a elementum non, vulputate ut arcu. Aliquam erat volutpat. Nullam lacinia felis.</p>
+                                        <p class="text">Right now,we are only providing with ITR-1 filling and GST-registration.</p>
                                     </div>
                                 </div> 
                             </div> <!-- card -->
                             <div class="card">
                                 <div class="card-header" id="headingTwo">
-                                    <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Frequently Asked Question Two</a>
+                                    <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How does this site works?</a>
                                 </div>
                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <p class="text">Morbi vehicula arcu et pellentesque tincidunt. Nunc ligula nulla, lobortis a elementum non, vulputate ut arcu. Aliquam erat volutpat. Nullam lacinia felis.</p>
+                                        <p class="text">It's a 3 step process.<br>1.Register And Login yourself.<br>2.Select the service and pay for it.<br>3.Upload necessary documents.<br>Then you are done.Completely hassle-free process.</p>
                                     </div>
                                 </div>
                             </div> <!-- card -->
                             <div class="card">
                                 <div class="card-header" id="headingThree">
-                                    <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Frequently Asked Question Three</a>
+                                    <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">What are the different modes of payment? </a>
                                 </div>
                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <p class="text">Morbi vehicula arcu et pellentesque tincidunt. Nunc ligula nulla, lobortis a elementum non, vulputate ut arcu. Aliquam erat volutpat. Nullam lacinia felis.</p>
+                                        <p class="text">All modes such as Credit,Debit,UPI and Internet Banking,etc..,via Razorpayment Gateway system,which makes your payment completly secure and safe.</p>
                                     </div>
                                 </div>
                             </div> <!-- card -->
-                            <div class="card">
-                                <div class="card-header" id="headingFore">
-                                    <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFore" aria-expanded="false" aria-controls="collapseFore">Frequently Asked Question Four</a>
-                                </div>
-                                <div id="collapseFore" class="collapse" aria-labelledby="headingFore" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        <p class="text">Morbi vehicula arcu et pellentesque tincidunt. Nunc ligula nulla, lobortis a elementum non, vulputate ut arcu. Aliquam erat volutpat. Nullam lacinia felis.</p>
-                                    </div>
-                                </div>
-                            </div> <!-- card -->
-                            <div class="card">
-                                <div class="card-header" id="headingFive">
-                                    <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Frequently Asked Question Five</a>
-                                </div>
-                                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        <p class="text">Morbi vehicula arcu et pellentesque tincidunt. Nunc ligula nulla, lobortis a elementum non, vulputate ut arcu. Aliquam erat volutpat. Nullam lacinia felis.</p>
-                                    </div>
-                                </div>
-                            </div> <!-- card -->
+                            
                         </div>
                     </div> <!-- faq accordion -->
                 </div> <!-- faq content -->
