--- a/views/slider.ejs
+++ b/views/slider.ejs
@@ -5,24 +5,32 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-6">
+                    <div class="row justify-content-around">
+                        <div class=" col-lg-8 ">
                             <div class="slider-content">
-                                <h1 class="title">Filing ITR <br>is one Click away</h1>
+                                <h1 class="title text-center">Filing ITR is one Click away</h1>
                                 <p class="text">We blend insights and strategy to create digital products for forward-thinking organisations.</p>
-                                <ul class="slider-btn rounded-buttons">
-                                    <li><a id="" class="main-btn rounded-one" href="/register">Sign-Up</a></li>
-                                    <li><a id="" class="main-btn rounded-two" href="/login">Log-In</a></li>
-                                </ul>
+                                <div class="row justify-content-center">
+                                    <div class="col-md-6">
+                                        <ul class="slider-btn rounded-buttons">
+                                            <li><a id="" class="main-btn rounded-one" href="/register">Sign-Up</a></li>
+                                            <li><a id="" class="main-btn rounded-two" href="/login">Log-In</a></li>
+                                        </ul>
+                                    </div>
+                                  
+                                </div>
+                                
                             </div>
                         </div>
+                        
+
                     </div> <!-- row -->
                 </div> <!-- container -->
-                <div class="slider-image-box d-none d-lg-flex align-items-end">
-                    <div class="slider-image">
-                        <img src="assets/images/slider/" alt="">
-                    </div> <!-- slider-imgae -->
-                </div> <!-- slider-imgae box -->
+                <!-- <div class="row d-none d-lg-flex align-items-end">
+                    <div class="col-md-4">
+                        <img src="assets/images/frontpic.jpg" alt="">
+                    </div>  slider-imgae -->
+                <!-- </div> slider-imgae box -->
             </div> <!-- carousel-item -->
 
             
