--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -92,7 +92,8 @@
                                  <br>
                                  <h6 class="heading-content">Uploaded Documents</h6>
                                  <div class="gap  row justify-content-around" style="width: auto;">
-                                   <div class="col-md-4 " ><img style="width: 200px ;" src="data: <%= data.userPersonalData[0].savefile1[0].file1Type%>;charset=utf-8;base64,<%= arr[0]%>">
+                                   <div class="col-md-4 " >
+                                    <a href="data: <%= data.userPersonalData[0].savefile1[0].file1Type%>;charset=utf-8;base64,<%= arr[0]%>" download><img style="width: 200px ;" src="data: <%= data.userPersonalData[0].savefile1[0].file1Type%>;charset=utf-8;base64,<%= arr[0]%>"></a> 
                                    </div>
                                    <div class="col-md-4"><img style="width: 200px ;" src="data: <%= data.userPersonalData[0].savefile1[1].file1Type%>;charset=utf-8;base64,<%= arr[1]%>">
                                    </div>
