--- a/views/forgotpage.ejs
+++ b/views/forgotpage.ejs
@@ -6,10 +6,15 @@
   <title>Secrets</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="signStyle.css">
+  <!-- <link rel="stylesheet" href="signStyle.css"> -->
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body style="
+background: #007bff;
+background: linear-gradient(to right, #0062E6, #33AEFF);"
+>
+
 
   <div class="container">
     <div class="row">
@@ -19,7 +24,7 @@
              <!-- Background image for card set in CSS! -->
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center">Add Account</h5>
+            <h5 class="card-title text-center">Get Reset Link </h5>
             <form class="form-signin" action="/forgot" method="POST" >
 
               <div class="form-label-group">
@@ -39,6 +44,7 @@
   </div>
 
 
+  <%- include("footer"); -%>
 
   
 </body>
