--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,10 +6,13 @@
   <title>Secrets</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="signStyle.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body style="
+background: #007bff;
+background: linear-gradient(to right, #0062E6, #33AEFF);"
+>
 
   <div class="container">
     <div class="row">
@@ -34,7 +37,8 @@
                 <label for="inputPassword">Password</label>
               </div>
               
-
+              <a class="d-block text-center mt-2 small" href="/forgotpassword">Forgot Password?</a>
+              <br>
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Log-In</button>
             
               <hr class="my-4">
@@ -49,6 +53,7 @@
 
 
 
+  <%- include("footer"); -%>
   
 </body>
 </html>
