--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -7,6 +7,7 @@
                     <a class="navbar-brand" href="#">
                         <img src="assets/images/logo.svg" alt="Logo">
                     </a>
+                    <h4 class="d-md-none">taxsupport</h4>
                     
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="toggler-icon"></span>
@@ -16,8 +17,7 @@
 
                     <div class="collapse navbar-collapse sub-menu-bar" id="navbarTwo">
                         <ul class="navbar-nav m-auto">
-                            <li class="nav-item active"><a class="page-scroll" href="/">home</a></li>
-                            <!-- <li class="nav-item"><a class="page-scroll" href="#services">Services</a></li> -->
+                            <li class="nav-item active"><a class="page-scroll" href="#home">home</a></li>
                             <li class="nav-item"><a class="page-scroll" href="#pricing">Pricing</a></li>
                             <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
                             <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
