--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -3,56 +3,55 @@
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-10">
                 <div class="section-title text-center pb-25">
-                    <h3 class="title">Pricing Plans</h3>
-                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                    <h3 class="title">Services Offered</h3>
+                    <p class="text">No longer need to fill large forms and calculate data on yourself.<br>Let our Personnels,specialized in this network,<br>deliver high quality services to you.  </p>
                 </div> <!-- section title -->
             </div>
         </div> <!-- row -->
-        <div class="row justify-content-center">
+        <div class="row justify-content-around">
            
             <div class="col-lg-4 col-md-7 col-sm-9">
                 <div class="pricing-style mt-30">
                     <div class="pricing-icon text-center">
-                        <img src="assets/images/basic.svg" alt="">
+                        <img class="img-thumbnail" src="assets/images/service1.jpg" alt="">
                     </div>
                     <div class="pricing-header text-center">
-                        <h5 class="sub-title">Basic</h5>
-                        <p class="month"><span class="price">$ 199</span>/month</p>
+                        <h5 class="sub-title">ITR-1</h5>
+                        <p class="month"><span class="price"><i class="fa fa-inr" aria-hidden="true"></i>  499</span>/</p>
                     </div>
-                    <div class="pricing-list">
+                    <div class="pricing-list ">
                         <ul>
-                            <li><i class="lni lni-check-mark-circle"></i> Carefully crafted components</li>
-                            <li><i class="lni lni-check-mark-circle"></i> Amazing page examples</li>
+                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Easy Uploading.</li>
+                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Easy Submission.</li>
+                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>One-Click-Filing.</li>
                         </ul>
                     </div>
-                    <div class="pricing-btn rounded-buttons text-center">
-                        <a class="main-btn rounded-one" href="#">GET STARTED</a>
-                    </div>    
+                       
                 </div> <!-- pricing style one -->
             </div>
             
             <div class="col-lg-4 col-md-7 col-sm-9">
                 <div class="pricing-style mt-30">
                     <div class="pricing-icon text-center">
-                        <img src="assets/images/pro.svg" alt="">
+                        <img class="img-thumbnail" src="assets/images/service2.jpg" alt="">
                     </div>
                     <div class="pricing-header text-center">
-                        <h5 class="sub-title">Pro</h5>
-                        <p class="month"><span class="price">$ 399</span>/month</p>
+                        <h5 class="sub-title">GST-Registration</h5>
+                        <p class="month"><span class="price"><i class="fa fa-inr" aria-hidden="true"></i> 999</span>/</p>
                     </div>
                     <div class="pricing-list">
                         <ul>
-                            <li><i class="lni lni-check-mark-circle"></i> Carefully crafted components</li>
-                            <li><i class="lni lni-check-mark-circle"></i> Amazing page examples</li>
+                            <li  style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Register Yourself.</li>
+                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Pay for the service.</li>
+                            <li style="padding-left:3em"><i class="fa fa-circle-o" aria-hidden="true"></i>Upload the Documents.</li>
+                            
                         </ul>
                     </div>
-                    <div class="pricing-btn rounded-buttons text-center">
-                        <a class="main-btn rounded-one" href="#">GET STARTED</a>
-                    </div>
+                    
                 </div> <!-- pricing style one -->
             </div>
             
-            <div class="col-lg-4 col-md-7 col-sm-9">
+            <!-- <div class="col-lg-4 col-md-7 col-sm-9">
                 <div class="pricing-style mt-30">
                     <div class="pricing-icon text-center">
                         <img src="assets/images/enterprise.svg" alt="">
@@ -70,8 +69,8 @@
                     <div class="pricing-btn rounded-buttons text-center">
                         <a class="main-btn rounded-one" href="#">GET STARTED</a>
                     </div>
-                </div> <!-- pricing style one -->
-            </div>
+                </div>  pricing style one -->
+            <!-- </div> --> 
         </div> <!-- row -->
     </div> <!-- container -->
 </section>
