--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,12 +6,16 @@
   <title>Secrets</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="signStyle.css">
+  <!-- <link rel="stylesheet" href="signStyle.css"> -->
+  
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body style="background: #007bff;
+background: linear-gradient(to right, #0062E6, #33AEFF);
+">
 
-  <div class="container">
+  <div class="container ">
     <div class="row">
       <div class="col-lg-9 col-xl-8 mx-auto">
         <div class="card card-signin flex-row my-5">
@@ -37,7 +41,6 @@
 
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Register</button>
               <a class="d-block text-center mt-2 small" href="/login">Log In</a>
-              <a class="d-block text-center mt-2 small" href="/forgotpassword">Forgot Password</a>
               <hr class="my-4">
               <a class="btn btn-lg btn-google btn-block text-uppercase" href="/auth/google" role="button"><i class="fab fa-google mr-2"></i> Sign up with Google</a>
               
@@ -50,6 +53,7 @@
 
 
 
+  <%- include("footer"); -%>
   
 </body>
 </html>
