--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,21 +1,3 @@
-/*-----------------------------------------------------------------------------------
-
-    Template Name: Smash - Bootstrap Template
-    Template URI: uideck.com
-    Author: UIdeck
-    Version: 1.0
-
------------------------------------------------------------------------------------
-
-    CSS INDEX
-    ===================
-
-    01. Theme default CSS
-	02. Header
-    03. Hero
-	04. Footer
-
------------------------------------------------------------------------------------*/
 /*===========================
       01.COMMON css 
 ===========================*/
@@ -107,8 +89,10 @@ p {
 /*===== All Slick Slide Outline Style =====*/
 /* .slick-slide {
   outline: 0; } */
-
-
+/* 
+custom css
+custom css
+custom css */
 
   .card-signin {
     border: 0;
@@ -217,10 +201,136 @@ p {
 
 
 
+  .form-row{
+    padding: 1rem 0;
+    }
+    
+    .form-control{
+      border-radius:1.5rem;
+    }
+    
+    .centered {
+      padding-top: 200px;
+      text-align: center;
+    }
+    
+    .secret-text {
+    text-align: center;
+    font-size: 2rem;
+    color: #fff;
+    background-color: #000;
+    }
+    
+     
+    .blue{
+      background-color:#fcf9f4;
+    }
+    
+    
+    /* COMMON CSS */
+    
+     
+    /* HR ANIMATION */
+    .separator--line {
+      border: 0;
+      border-bottom: 5px solid #ff0000;
+    
+      width: 0;
+      animation: separator-width 2s ease-out forwards;
+    }
+    @keyframes separator-width {
+      0% {
+        width: 0;
+      }
+      100% {
+        width: 80%;
+      }
+    }
+    
+    /* HR ANIMATION */
+    
+    
+    /* HEADING HR ANIMATION */
+    
+    
+    /* Heading */
+    .heading-H{
+      color:#00005c;
+      text-align: center; 
+      text-transform: uppercase;
+      font-size:30px;
+    }
+    .heading-content{
+      text-align: center;
+      font-size: large;
+      margin:2rem auto;
+      text-transform: uppercase;
+      text-decoration: underline ;
+    }
+    
+    .gap{margin: 6rem auto;}
+    .heading-label{
+      color:#1b6ca8;
+      font-weight: 600;
+    text-align: left;
+      /* text-transform: uppercase; */
+    }
+    
+    
+    .heading-info{
+      color: #e84a5f;
+      text-align: left;
+    
+    }
+    /* generally para tags */
+    .heading-description{
+    font-weight:400;
+    font-size: medium;
+    color: #323232;
+    text-align: left;
+    }
+    .heading-description-1{
+      font-weight:300;
+      font-size: small;
+      color: #323232;
+      text-align: left;
+      }
+    /* Heading */
+    
+    .hide{
+      display: none;
+    }
+    .step-shadow-box{
+      background: #fff;
+      border-radius: 2px;
+      }  /* margin: 1rem; */
+        /* position: relative; */
+        /* width: 300px; */
+       
+    .step-shadow-box-1{
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    }
+    .step-shadow-box-1:hover{
+      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
+    
+    
+    .inner-section-step.active{
+      margin-top: 8rem;
+      /* overflow: visible; */
+      /* width: 100%; */
+      z-index: 1;
+      opacity: 1;
+      transition: all 0.4s ease-in-out;
+      display: block;
+      
+     }
 
-
-
-
+/* 
+custom css
+custom css
+custom css */
 
 
 
