--- a/views/resetPage.ejs
+++ b/views/resetPage.ejs
@@ -6,11 +6,15 @@
   <title>Secretss</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="signStyle.css">
+  <!-- <link rel="stylesheet" href="signStyle.css"> -->
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
-<body>
+<body style="
+background: #007bff;
+background: linear-gradient(to right, #0062E6, #33AEFF);"
+>
 
   <div class="container">
     <div class="row">
@@ -20,16 +24,18 @@
              <!-- Background image for card set in CSS! -->
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center" name="resetId" >Change Password</h5>
+            <h5 class="card-title text-center" name="resetId" >Set New Password</h5>
             <form class="form-signin" action="/reset/<%= customResetId %>" method="POST" >
 
               <div class="form-label-group">
-                <input name="resetpassword" type="text" id="resetpassword" class="form-control" placeholder="Enter Password" required>
+                <input name="resetpassword" placeholder="Enter Password"  type="password" id="resetpassword" class="form-control" required>
                 
+                <label for="resetpassword">Enter Password</label>
               </div>
               <div class="form-label-group">
-                <input name="confirmresetpassword" type="text" id="coonfirmresetpassword" class="form-control" placeholder="Enter Password" required>
+                <input name="confirmresetpassword" type="password" id="confirmresetpassword" class="form-control" placeholder="Confirm Password" required>
                 
+                <label for="confirmresetpassword">Confirm Password</label>
               </div>
 
 
@@ -44,6 +50,7 @@
 
 
 
+  <%- include("footer"); -%>
   
 </body>
 </html>
